fix info section on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -812,6 +812,15 @@ p, #achievement-description, #achievement-description2, #achievement-description
         height: 250px;
     }
 
+    #info .container-left {
+        width: 100%;
+        align-items: center;
+    }
+
+    #info .container-left img {
+        width: 80%;
+    }
+
     .features {
         flex-direction: column;
     }
